tdf#164474: do not delete anchor node, when the anchor didn't move

Regression since commit f09420fa189be5165b0311083ba127073500a121
(tdf#158855: Make sure to not add extra paragraph after a table in
a section, 2023-12-25).
The code in SwXText::convertToTextFrame still relied on existing
extra paragraph after the table, which now gets removed.

Change-Id: I562058c15e323a23e3278fd7743f877eeec25999
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179443
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins